# eloelo

./: .gitignore  CODEOWNERS  Cargo.toml  LICENSE  README.md  TODO  bacon.toml  biome.json  deploy-dota-agent.sh  index.html  package-lock.json  package.json  pre-commit  server.sh  tsconfig.json  vite.config.ts  watch.sh
.github/workflows/: auto-approve.yml  rust.yml  typescript.yml
crates/eloelo_model/: Cargo.toml
crates/eloelo_model/src/: decimal.rs  history.rs  lib.rs  options.rs  player.rs
crates/spawelo/: Cargo.toml
crates/spawelo/src/: lib.rs  options.rs
crates/spawelo_cli/: Cargo.toml
crates/spawelo_cli/src/: main.rs
dota-agent/: README.md  dota-agent.py  dota-ocr-engine.py  pyproject.toml
dota-ocr-engine/: README.md  dota-ocr-engine.py  pyproject.toml
elo_sim/: elo_sim.py  pyproject.toml
src/: App.tsx  Duration.tsx  HistoryView.tsx  ReserveList.tsx  TeamSelector.tsx  ThemeSwitcher.tsx  api.rs  dead_mans_switch.rs  eloelo.rs  lib.rs  logging.rs  main.rs  model.tsx  parse.tsx  useColorMode.ts  usePreferredColorScheme.ts  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/eloelo_model/: Cargo.toml
src-tauri/crates/eloelo_model/src/: history.rs  lib.rs  player.rs
src-tauri/crates/spawelo/src/: lib.rs
src-tauri/src/: dead_mans_switch.rs  dir_watcher.rs  eloelo.rs  lib.rs  logging.rs  main.rs
src-tauri/src/eloelo/: call_to_lobby.rs  config.rs  dota_screenshot_scrapping.rs  elodisco.rs  git_mirror.rs  logging.rs  message_bus.rs  store.rs  ui_state.rs
src-tauri/src/eloelo/elodisco/: async_elodisco.rs  bot_state.rs  command_handler.rs  dota_bot.rs  dota_heroes.txt  notification_bot.rs
src/components/: PresentInLobbyButton.tsx
src/eloelo/: call_to_lobby.rs  config.rs  elodisco.rs  fosiaudio.rs  git_mirror.rs  message_bus.rs  ocr.rs  options.rs  silly_responder.rs  store.rs  ui_state.rs
src/eloelo/elodisco/: async_elodisco.rs  bot_state.rs  dota_bot.rs  dota_heroes.csv  dota_heroes.txt  hero_assignment_strategy.rs  hero_pool_generators.rs  messages.rs  notification_bot.rs  utils.rs
src/eloelo/elodisco/hero_assignment_strategy/: hero_similarity_matrix.csv  random_hero_pool.rs  tagged_hero_pool.rs  tests.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: Api.ts  App.tsx  AppBar.tsx  Duration.test.ts  Duration.tsx  FinishMatchModal.tsx  HistoryView.tsx  ReserveList.tsx  TeamSelector.tsx  ThemeSwitcher.tsx  initialColorScheme.js  model.tsx  parse.tsx  useColorMode.ts
ui/src/components/: CallPlayerButton.tsx  DefaultModal.tsx  DefaultTooltip.tsx  PresentInLobbyButton.tsx  SplitButton.tsx  ThemeSwitcher.tsx
ui/src/views/: OptionsView.tsx
