[workspace]
members = ["crates/*"]

[workspace.dependencies]
eloelo_model = { path = "crates/eloelo_model" }
spawelo = { path = "crates/spawelo" }

[package]
name = "eloelo"
version = "0.1.0"
description = "Calculating ELO scores!"
authors = ["wazniak"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5.0.1"
anyhow = "1"
serde_yaml = "0.9.33"
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
serenity = "0.12.2"
log = "0.4.22"
flexi_logger = "0.29.3"
itertools = "0.13.0"
eloelo_model = { workspace = true }
spawelo = { workspace = true }
duct = "0.13.7"
reqwest = { version = "0.12.12", features = ["blocking", "multipart"] }
serde_urlencoded = "0.7.1"
axum = "0.8.1"

[profile.dev.package.spawelo]
opt-level = 1

[profile.dev.package.eloelo_model]
opt-level = 1

[dev-dependencies]
env_logger = "0.11.5"
tempdir = "0.3.7"
