[package]
name = "spawelo"
version = "0.1.0"
authors = ["wazniak"]
edition = "2021"

[dependencies]
itertools = "0.13.0"
log = "0.4.22"
rand = "0.9"
eloelo_model = { workspace = true }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
anyhow = "1"