[package]
name = "spawelo_cli"
version = "0.1.0"
authors = ["wazniak"]
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
eloelo_model = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
spawelo = { workspace = true }
